fixed all links; connected all views to Layout; propagated styling rules throughout

--- a/AsyncInn/AsyncInn.csproj
+++ b/AsyncInn/AsyncInn.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Hotel\Delete.cshtml" />
+    <Content Remove="Views\RoomConfig\Details.cshtml" />
+    <Content Remove="Views\RoomConfig\Edit.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
