--- a/AsyncInn/AsyncInn.csproj
+++ b/AsyncInn/AsyncInn.csproj
@@ -7,9 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="Views\Hotel\Delete.cshtml" />
+    <Content Remove="Views\Amenity\Details.cshtml" />
+    <Content Remove="Views\Hotel\Details.cshtml" />
+    <Content Remove="Views\Inventory\Details.cshtml" />
     <Content Remove="Views\RoomConfig\Details.cshtml" />
     <Content Remove="Views\RoomConfig\Edit.cshtml" />
+    <Content Remove="Views\RoomPlan\Details.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
